edit you_tokos and detail

--- a/surv/templates/surv/index.html
+++ b/surv/templates/surv/index.html
@@ -6,7 +6,7 @@
     <li><a href="">login</a></li>
     <li><a href="{% url 'surv:profile' %}">profile</a></li>
     <li><a href="">setting</a></li>
-    <li><a href="{% url 'surv:your_toko' %}">your toko</a></li>
+    <li><a href="{% url 'surv:your_tokos' %}">your toko</a></li>
   </ul>
 </div>
 <div id="center">
