--- a/surv/templates/surv/detail.html
+++ b/surv/templates/surv/detail.html
@@ -1,11 +1,12 @@
-<h1>{{ toko }}</h1>
-
-<form action="{% url 'surv:send' toko.id %}"></form>
-{% for answer in toko.answer_set.all %}
-<input type="radio" name="answer" value="{{answer.id }}">
-<label>{{ answer }}</label>
-{% endfor %}
-<div><input type="submit" value="send"></div>
+<form action="{% url 'surv:send' toko.id %}" method="post">{% csrf_token %}
+  <fieldset>
+    <legend><h1>{{ toko }}</h1></legend>
+    {% for answer in toko.answer_set.all %}
+      <input type="radio" name="answer" id="answer{{ forloop.counter }}" value="{{ answer.id }}">
+      <label for="answer{{ forloop.counter }}">{{ answer }}</label>
+    {% endfor %}
+  </fieldset>
+  <div><input type="submit" value="send"></div>
 </form>
 
 <div><a href="{% url 'surv:index' %}">back to home</a></div>
