--- a/surv/templates/surv/your_tokos.html
+++ b/surv/templates/surv/your_tokos.html
@@ -1,17 +1,17 @@
-{% extends "surv/base.html" %}
-
-{% block content %}
-<div>
-{% for atoko in toko %}
-<div>
-  <div id="text">
-    {{ atoko.text }}
+{% load mathfilters %}
+{% for a in toko_list %}
+  <div style="border-bottom: 1px solid gray;">
+    <p>{{ a.text }}</p>
+    {% for ans in a.answer_set.all %}
+    <ul>
+      {% if a.nsum == 0 %}
+      <li>0% {{ ans.answer }}</li>
+      {% else %}
+      <li>{{ ans.num | mul:100 | intdiv:a.nsum  }}% {{ ans.answer }}</li>
+      {% endif %}
+    </ul>
+    {% endfor %}
   </div>
-  {% for answer in toko.answer_set.all %}
-    {{ answer.answer }}
-  {% endfor %}
-</div>
 {% endfor %}
+
 <div><a href="{% url 'surv:index' %}">back to home</a></div>
-</div>
-{% endblock %}
