edit and add some function to category

--- a/surv/static/surv/css/style.css
+++ b/surv/static/surv/css/style.css
@@ -25,6 +25,12 @@ body {
   height: 170px;
 }
 
+#drop {
+  background-color: gold;
+  margin-right: 0;
+  margin-left: auto;
+}
+
 .plus {
   text-align: right;
 }
