--- a/surv/templates/surv/detail.html
+++ b/surv/templates/surv/detail.html
@@ -9,4 +9,8 @@
   <div><input type="submit" value="send"></div>
 </form>
 
+<div>
+  <a href="{% url 'surv:result' toko.id %}">see the result</a>
+</div>
+
 <div><a href="{% url 'surv:index' %}">back to home</a></div>
