add login function

--- a/surv/templates/surv/detail.html
+++ b/surv/templates/surv/detail.html
@@ -10,7 +10,7 @@
 </form>
 
 <div>
-  <a href="{% url 'surv:result' toko.id %}">see the result</a>
+  <a href="{% url 'surv:result' toko.id %}">show the result</a>
 </div>
 
 <div><a href="{% url 'surv:index' %}">back to home</a></div>
