add signup function

--- a/registration/templates/registration/password_reset_confirm.html
+++ b/registration/templates/registration/password_reset_confirm.html
@@ -1,6 +1,6 @@
-<h2>パスワードリセット</h2>
+<h2>password reset</h2>
 {% if validlink %}
 {% include "_form.html" with submit_label="reset" %}
 {% else %}
-<p>無効なリンクです。</p>
+<p>invalid link.</p>
 {% endif %}
