--- a/surv/templates/surv/index.html
+++ b/surv/templates/surv/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div id="left">
   <ul>
-    <li><a href="{% url 'surv:login' %}">login</a></li>
+    <li><a href="{% url 'surv:login' %}">login or signup</a></li>
     <li><a href="{% url 'surv:profile' %}">profile</a></li>
     <li><a href="{% url 'surv:login_index' %}">setting</a></li>
     <li><a href="{% url 'surv:your_tokos' %}">your toko</a></li>
