--- a/surv/templates/surv/result.html
+++ b/surv/templates/surv/result.html
@@ -5,4 +5,6 @@
   <p>{{ answer.num | mul:100 | intdiv:toko.nsum  }}% {{ answer.answer }}</p>
 {% endfor %}
 
+<p>{{ toko.nsum }}votes</p>
+
 <div><a href="{% url 'surv:index' %}">back to home</a></div>
