--- a/registration/templates/registration/index.html
+++ b/registration/templates/registration/index.html
@@ -1,3 +1,3 @@
-<p><a href="{% url 'logout' %}">ログアウト</a></p>
-<p><a href="{% url 'password_change' %}">パスワードの変更</a></p>
-<p><a href="{% url 'password_reset' %}">パスワードを忘れた場合</a></p>
+<p><a href="{% url 'logout' %}">logout</a></p>
+<p><a href="{% url 'password_change' %}">change password</a></p>
+<p><a href="{% url 'password_reset' %}">forget your password?</a></p>
