--- a/registration/templates/registration/password_reset_complete.html
+++ b/registration/templates/registration/password_reset_complete.html
@@ -1,3 +1,2 @@
-<h2>パスワード設定完了</h2>
-<p>パスワード変更が完了しました。</p>
-<p><a href="{% url 'login' %}">ログイン</a></p>
+<p>Your password has been changed.</p>
+<p><a href="{% url 'login' %}">login</a></p>
